# pyLocalSend

./: .gitignore  pyproject.toml
localsend/: __init__.py  __main__.py  certs.py  device.py  exceptions.py  file_info.py  jwt.py  localsend.py
